<resources>
    <string name="title">Wakka Wallpaper</string>
    <string name="author">Jake Wharton</string>
    <string name="description">Creates a grid of dots that border your icons for some om nom nom.</string>
    <string name="version_name">1.0.0 RC6</string>
    <string name="version_code_key">version</string>
    <string name="welcome_firstrun">Thanks for installing!\n\nWould you like to read the instructions?</string>
    <string name="welcome_upgrade">Thanks for upgrading!\n\nWould you like to read the change log?</string>
    <string name="welcome_picker_toast">Choose \"Wakka Wallpaper\" from the list.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ready">READY!</string>
    <string name="gameover">GAME OVER</string>
    <string name="display_widgetlocations_default"/>
    <string name="widgetlocations_howto">Draw rectangles to indicate widget positions. Long press to delete.</string>
    <string name="reset_game">Are you sure you want to reset all game-related settings?</string>
    <string name="reset_game_toast">All game-related settings reset.</string>
    <string name="reset_display">Are you sure you want to reset all display-related settings?</string>
    <string name="reset_display_toast">All display-related settings reset.</string>
    <string name="reset_color">Are you sure you want to reset all color-related settings?</string>
    <string name="reset_color_toast">All color-related settings reset.</string>
    <string name="reset_all">Are you sure you want to reset all settings?</string>
    <string name="reset_all_toast">All settings reset.</string>
    <string name="settings_key">settings</string>
    <string name="settings_header">Settings</string>
    <string name="settings_display">Display</string>
    <string name="settings_display_key">display</string>
    <string name="settings_display_summary">Layout, offsets, FPS...</string>
    <string name="settings_game">Game</string>
    <string name="settings_game_key">game</string>
    <string name="settings_game_summary">Points, bonuses, ghosts...</string>
    <string name="settings_color">Colors and Background</string>
    <string name="settings_color_key">colors</string>
    <string name="settings_color_summary">Dots, ghosts, background...</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_key">reset</string>
    <string name="settings_display_fps">FPS</string>
    <string name="settings_display_fps_key">display_fps</string>
    <string name="settings_display_fps_summary">Number of times per second to advance the game</string>
    <string name="settings_display_juggerdotblink">Juggerdot Blink Interval</string>
    <string name="settings_display_juggerdotblink_key">display_juggerdotblink</string>
    <string name="settings_display_juggerdotblink_summary">Number of frames to toggle visibility of juggerdots.</string>
    <string name="settings_display_showhud">Show HUD</string>
    <string name="settings_display_showhud_key">display_showhud</string>
    <string name="settings_display_showhud_summary">Toggle the heads-up display for lives and score</string>
    <string name="settings_display_hudsize">HUD Size</string>
    <string name="settings_display_hudsize_key">display_hudsize</string>
    <string name="settings_display_hudsize_summary">Size of the lives and score</string>
    <string name="settings_display_hudoffset">HUD Offset</string>
    <string name="settings_display_iconrows">Icon Rows</string>
    <string name="settings_display_iconrows_key">display_iconrows</string>
    <string name="settings_display_iconrows_summary">Number of icon rows on your home screen</string>
    <string name="settings_display_iconcols">Icon Columns</string>
    <string name="settings_display_iconcols_key">display_iconcols</string>
    <string name="settings_display_iconcols_summary">Number of icon columns on your home screen</string>
    <string name="settings_display_rowspacing">Icon Row Cell Spacing</string>
    <string name="settings_display_rowspacing_key">display_rowspacing</string>
    <string name="settings_display_rowspacing_summary">Number of cells in an icon row</string>
    <string name="settings_display_colspacing">Icon Column Cell Spacing</string>
    <string name="settings_display_colspacing_key">display_colspacing</string>
    <string name="settings_display_colspacing_summary">Number of cells in an icon column</string>
    <string name="settings_display_padding">Grid Padding</string>
    <string name="settings_display_padding_key">display_padding</string>
    <string name="settings_display_padding_summary">Padding offsets on the four edges of the grid</string>
    <string name="settings_display_padding_top">Top</string>
    <string name="settings_display_padding_top_key">display_padding_top</string>
    <string name="settings_display_padding_top_summary"></string>
    <string name="settings_display_padding_bottom">Bottom</string>
    <string name="settings_display_padding_bottom_key">display_padding_bottom</string>
    <string name="settings_display_padding_bottom_summary"></string>
    <string name="settings_display_padding_left">Left</string>
    <string name="settings_display_padding_left_key">display_padding_left</string>
    <string name="settings_display_padding_left_summary"></string>
    <string name="settings_display_padding_right">Right</string>
    <string name="settings_display_padding_right_key">display_padding_right</string>
    <string name="settings_display_padding_right_summary"></string>
    <string name="settings_game_killscreen">Display Kill Screen</string>
    <string name="settings_game_killscreen_key">game_killscreen</string>
    <string name="settings_game_killscreen_summary">Randomly display the infamous kill screen</string>
    <string name="settings_game_deadlyghosts">Deadly</string>
    <string name="settings_game_deadlyghosts_key">game_deadlyghosts</string>
    <string name="settings_game_deadlyghosts_summary">Whether or not colliding with ghost will kill you</string>
    <string name="settings_game_ghostcount">Number of Ghosts</string>
    <string name="settings_game_ghostcount_key">game_ghostcount</string>
    <string name="settings_game_ghostcount_summary">How many ghosts appear on screen</string>
    <string name="settings_game_bonuslife">Bonus Life Allowed</string>
    <string name="settings_game_bonuslife_key">game_bonuslife</string>
    <string name="settings_game_bonuslife_summary">If a bonus life is awarded at the defined threshold</string>
    <string name="settings_game_bonuslifethreshold">Bonus Life Threshold</string>
    <string name="settings_game_bonuslifethreshold_key">game_bonuslifethreshold</string>
    <string name="settings_game_bonuslifethreshold_summary">Points at which to award bonus life</string>
    <string name="settings_game_fruitonethreshold">Fruit One Threshold</string>
    <string name="settings_game_fruitonethreshold_key">game_fruitonethreshold</string>
    <string name="settings_game_fruitonethreshold_summary">Dots eaten requirement before first fruit appears</string>
    <string name="settings_game_fruittwothreshold">Fruit Two Threshold</string>
    <string name="settings_game_fruittwothreshold_key">game_fruittwothreshold</string>
    <string name="settings_game_fruittwothreshold_summary">Dots eaten requirement before second fruit appears</string>
    <string name="settings_game_fruitvisiblelower">Fruit Visible Lower</string>
    <string name="settings_game_fruitvisiblelower_key">game_fruitvisiblelower</string>
    <string name="settings_game_fruitvisiblelower_summary">Shortest amount of time a fruit can be visible (in milliseconds)</string>
    <string name="settings_game_fruitvisibleupper">Fruit Visible Upper</string>
    <string name="settings_game_fruitvisibleupper_key">game_fruitvisibleupper</string>
    <string name="settings_game_fruitvisibleupper_summary">Longest amount of time a fruit can be visible (in milliseconds)</string>
    <string name="settings_color_game">Game Board</string>
    <string name="settings_color_game_key">color_game</string>
    <string name="settings_color_game_summary">Background, dots, and HUD</string>
    <string name="settings_color_game_background">Background Color</string>
    <string name="settings_color_game_background_key">color_game_background</string>
    <string name="settings_color_game_background_summary"></string>
    <string name="settings_color_game_dot">Dot Color</string>
    <string name="settings_color_game_dot_key">color_game_dot</string>
    <string name="settings_color_game_dot_summary"></string>
    <string name="settings_color_game_hudfg">HUD Foreground</string>
    <string name="settings_color_game_hudfg_key">color_game_hudfg</string>
    <string name="settings_color_game_hudfg_summary">Level and score text</string>
    <string name="settings_color_game_hudbg">HUD Shadow</string>
    <string name="settings_color_game_hudbg_key">color_game_hudbg</string>
    <string name="settings_color_game_hudbg_summary">Level and score text shadow</string>
    <string name="settings_color_theman">"The Man" Color</string>
    <string name="settings_color_theman_key">color_theman</string>
    <string name="settings_color_theman_summary">Foreground color</string>
    <string name="settings_color_ghost">Ghost Colors</string>
    <string name="settings_color_ghost_key">color_ghost</string>
    <string name="settings_color_ghost_summary">Body, eyes, and scared</string>
    <string name="settings_color_ghost_eyefg">Eye Foreground</string>
    <string name="settings_color_ghost_eyefg_key">color_ghost_eyefg</string>
    <string name="settings_color_ghost_eyefg_summary"></string>
    <string name="settings_color_ghost_eyebg">Eye Background</string>
    <string name="settings_color_ghost_eyebg_key">color_ghost_eyebg</string>
    <string name="settings_color_ghost_eyebg_summary"></string>
    <string name="settings_color_ghost_scaredfg">Scared Eyes</string>
    <string name="settings_color_ghost_scaredfg_key">color_ghost_scaredfg</string>
    <string name="settings_color_ghost_scaredfg_summary"></string>
    <string name="settings_color_ghost_scaredbg">Scared Body</string>
    <string name="settings_color_ghost_scaredbg_key">color_ghost_scaredbg</string>
    <string name="settings_color_ghost_scaredbg_summary"></string>
    <string name="settings_color_ghost_scaredblinkfg">Scared Blinking Eyes</string>
    <string name="settings_color_ghost_scaredblinkfg_key">color_ghost_scaredblinkfg</string>
    <string name="settings_color_ghost_scaredblinkfg_summary"></string>
    <string name="settings_color_ghost_scaredblinkbg">Scared Blinking Body</string>
    <string name="settings_color_ghost_scaredblinkbg_key">color_ghost_scaredblinkbg</string>
    <string name="settings_color_ghost_scaredblinkbg_summary"></string>
    <string name="information_header">Information</string>
    <string name="information_version">Version</string>
    <string name="information_version_key">information_version</string>
    <string name="information_author">Author</string>
    <string name="information_author_key">information_author</string>
    <string name="information_contact">Contact</string>
    <string name="information_contact_email">E-Mail</string>
    <string name="information_contact_email_key">information_contact_email</string>
    <string name="information_contact_email_summary">JakeWharton@GMail.com</string>
    <string name="information_contact_twitter">Twitter</string>
    <string name="information_contact_twitter_key">information_contact_twitter</string>
    <string name="information_contact_twitter_summary">\@JakeWharton</string>
    <string name="information_contact_website">Website</string>
    <string name="information_contact_website_key">information_contact_website</string>
    <string name="information_contact_website_summary">http://jakewharton.com</string>
</resources>