<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/title"
	android:key="WakkaWallpaper_Settings">
	
	<PreferenceCategory
		android:title="@string/settings_header">
		<PreferenceScreen
			android:key="@string/settings_display_key"
			android:title="@string/settings_display"
			android:summary="@string/settings_display_summary">
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_fps_key"
				android:title="@string/settings_display_fps"
				android:summary="@string/settings_display_fps_summary"/>
			<CheckBoxPreference
				android:key="@string/settings_display_showhud_key"
				android:title="@string/settings_display_showhud"
				android:summary="@string/settings_display_showhud_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_iconrows_key"
				android:title="@string/settings_display_iconrows"
				android:summary="@string/settings_display_iconrows_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_iconcols_key"
				android:title="@string/settings_display_iconcols"
				android:summary="@string/settings_display_iconcols_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_rowspacing_key"
				android:title="@string/settings_display_rowspacing"
				android:summary="@string/settings_display_rowspacing_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_colspacing_key"
				android:title="@string/settings_display_colspacing"
				android:summary="@string/settings_display_colspacing_summary"/>
			<PreferenceScreen
				android:key="@string/settings_display_padding_key"
				android:title="@string/settings_display_padding"
				android:summary="@string/settings_display_padding_summary">
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_display_padding_top_key"
					android:title="@string/settings_display_padding_top"
					android:summary="@string/settings_display_padding_top_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_display_padding_bottom_key"
					android:title="@string/settings_display_padding_bottom"
					android:summary="@string/settings_display_padding_bottom_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_display_padding_left_key"
					android:title="@string/settings_display_padding_left"
					android:summary="@string/settings_display_padding_left_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_display_padding_right_key"
					android:title="@string/settings_display_padding_right"
					android:summary="@string/settings_display_padding_right_summary"/>
			</PreferenceScreen>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/settings_game_key"
			android:title="@string/settings_game"
			android:summary="@string/settings_game_summary">
			<CheckBoxPreference
				android:key="@string/settings_game_deadlyghosts_key"
				android:title="@string/settings_game_deadlyghosts"
				android:summary="@string/settings_game_deadlyghosts_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_ghostcount_key"
				android:title="@string/settings_game_ghostcount"
				android:summary="@string/settings_game_ghostcount_summary"/>
			<CheckBoxPreference
				android:key="@string/settings_game_killscreen_key"
				android:title="@string/settings_game_killscreen"
				android:summary="@string/settings_game_killscreen_summary"/>
			<CheckBoxPreference
				android:key="@string/settings_game_bonuslife_key"
				android:title="@string/settings_game_bonuslife"
				android:summary="@string/settings_game_bonuslife_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_bonuslifethreshold_key"
				android:title="@string/settings_game_bonuslifethreshold"
				android:summary="@string/settings_game_bonuslifethreshold_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_fruitonethreshold_key"
				android:title="@string/settings_game_fruitonethreshold"
				android:summary="@string/settings_game_fruitonethreshold_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_fruittwothreshold_key"
				android:title="@string/settings_game_fruittwothreshold"
				android:summary="@string/settings_game_fruittwothreshold_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_fruitvisiblelower_key"
				android:title="@string/settings_game_fruitvisiblelower"
				android:summary="@string/settings_game_fruitvisiblelower_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_game_fruitvisibleupper_key"
				android:title="@string/settings_game_fruitvisibleupper"
				android:summary="@string/settings_game_fruitvisibleupper_summary"/>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/settings_color_key"
			android:title="@string/settings_color"
			android:summary="@string/settings_color_summary">
			<PreferenceScreen
				android:key="@string/settings_color_game_key"
				android:title="@string/settings_color_game"
				android:summary="@string/settings_color_game_summary">
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_game_background_key"
					android:title="@string/settings_color_game_background"
					android:summary="@string/settings_color_game_background_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_game_dot_key"
					android:title="@string/settings_color_game_dot"
					android:summary="@string/settings_color_game_dot_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_game_hudfg_key"
					android:title="@string/settings_color_game_hudfg"
					android:summary="@string/settings_color_game_hudfg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_game_hudbg_key"
					android:title="@string/settings_color_game_hudbg"
					android:summary="@string/settings_color_game_hudbg_summary"/>
			</PreferenceScreen>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_color_theman_key"
				android:title="@string/settings_color_theman"
				android:summary="@string/settings_color_theman_summary"/>
			<PreferenceScreen
				android:key="@string/settings_color_ghost_key"
				android:title="@string/settings_color_ghost"
				android:summary="@string/settings_color_ghost_summary">
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_eyebg_key"
					android:title="@string/settings_color_ghost_eyebg"
					android:summary="@string/settings_color_ghost_eyebg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_eyefg_key"
					android:title="@string/settings_color_ghost_eyefg"
					android:summary="@string/settings_color_ghost_eyefg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_scaredbg_key"
					android:title="@string/settings_color_ghost_scaredbg"
					android:summary="@string/settings_color_ghost_scaredbg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_scaredfg_key"
					android:title="@string/settings_color_ghost_scaredfg"
					android:summary="@string/settings_color_ghost_scaredfg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_scaredblinkbg_key"
					android:title="@string/settings_color_ghost_scaredblinkbg"
					android:summary="@string/settings_color_ghost_scaredblinkbg_summary"/>
				<com.jakewharton.utilities.EditNumberPreference
					android:key="@string/settings_color_ghost_scaredblinkfg_key"
					android:title="@string/settings_color_ghost_scaredblinkfg"
					android:summary="@string/settings_color_ghost_scaredblinkfg_summary"/>
			</PreferenceScreen>
		</PreferenceScreen>
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/information_header">
		<Preference
			android:key="@string/information_version_key"
			android:title="@string/information_version"
			android:summary="@string/version_name"
			style="?android:preferenceInformationStyle"/>
		<PreferenceScreen
			android:key="@string/information_author_key"
			android:title="@string/information_author"
			android:summary="@string/author">
			<Preference
				android:key="@string/information_author_key"
				android:title="@string/author"
				style="?android:preferenceInformationStyle"/>
			<PreferenceCategory
				android:title="@string/information_contact">
				<Preference
					android:key="@string/information_contact_email_key"
					android:title="@string/information_contact_email"
					android:summary="@string/information_contact_email_summary"/>
				<Preference
					android:key="@string/information_contact_twitter_key"
					android:title="@string/information_contact_twitter"
					android:summary="@string/information_contact_twitter_summary"/>
				<Preference
					android:key="@string/information_contact_website_key"
					android:title="@string/information_contact_website"
					android:summary="@string/information_contact_website_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>