<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/title"
	android:key="WakkaWallpaper_Settings">
	
	<PreferenceCategory
		android:title="@string/settings_header">
		<PreferenceScreen
			android:key="@string/settings_display_key"
			android:title="@string/settings_display"
			android:summary="@string/settings_display_summary">
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_fps_key"
				android:title="@string/settings_display_fps"
				android:summary="@string/settings_display_fps_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_iconrows_key"
				android:title="@string/settings_display_iconrows"
				android:summary="@string/settings_display_iconrows_summary"/>
			<com.jakewharton.utilities.EditNumberPreference
				android:key="@string/settings_display_iconcols_key"
				android:title="@string/settings_display_iconcols"
				android:summary="@string/settings_display_iconcols_summary"/>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/settings_game_key"
			android:title="@string/settings_game"
			android:summary="@string/settings_game_summary">
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/settings_color_key"
			android:title="@string/settings_color"
			android:summary="@string/settings_color_summary">
		</PreferenceScreen>
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/information_header">
		<Preference
			android:key="@string/information_version_key"
			android:title="@string/information_version"
			android:summary="@string/version_name"
			style="?android:preferenceInformationStyle"/>
		<PreferenceScreen
			android:key="@string/information_author_key"
			android:title="@string/information_author"
			android:summary="@string/author">
			<Preference
				android:key="@string/information_author_key"
				android:title="@string/author"
				style="?android:preferenceInformationStyle"/>
			<PreferenceCategory
				android:title="@string/information_contact">
				<Preference
					android:key="@string/information_contact_email_key"
					android:title="@string/information_contact_email"
					android:summary="@string/information_contact_email_summary"/>
				<Preference
					android:key="@string/information_contact_twitter_key"
					android:title="@string/information_contact_twitter"
					android:summary="@string/information_contact_twitter_summary"/>
				<Preference
					android:key="@string/information_contact_website_key"
					android:title="@string/information_contact_website"
					android:summary="@string/information_contact_website_summary"/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>